use in namespace declaration container with possibility to register of multiple same-named declarations